--- a/client/css/home.css
+++ b/client/css/home.css
@@ -3,3 +3,29 @@
 .dropdown-padding{
 	padding: 15px;
 }
+
+.hero-unit{
+	background-image: url('http://3.bp.blogspot.com/-lMB60qVZyFs/T6t3dGZwr9I/AAAAAAAAAJI/uKRoriFeSIQ/s1600/Cant+push+the+river.jpg');
+	background-repeat: no-repeat;
+	background-size: 120%;
+	width: 100%;
+	height: 300px;
+}
+
+.l1{
+	position:fixed;
+	top: 400px;
+	right: 260px;
+}
+
+.l2{
+	position:fixed;
+	top: 370px;
+	right: 840px;
+}
+
+.l3{
+	position:fixed;
+	top: 270px;
+	right: 600px;
+}
