--- a/client/css/home.css
+++ b/client/css/home.css
@@ -5,7 +5,7 @@
 }
 
 .hero-unit{
-	background-image: url('http://3.bp.blogspot.com/-lMB60qVZyFs/T6t3dGZwr9I/AAAAAAAAAJI/uKRoriFeSIQ/s1600/Cant+push+the+river.jpg');
+	background-image: url('../images/rivermap.jpg');
 	background-repeat: no-repeat;
 	background-size: 120%;
 	width: 100%;
