--- a/client/css/gameplay.css
+++ b/client/css/gameplay.css
@@ -5,6 +5,20 @@
 	background-color: #8c8;
 }
 
+#score{
+	margin-left: 5px;
+	margin-bottom: 5px;
+	background-color: #D3D3D3;
+    border-radius: 10px;
+    padding: 5px;
+    width: 15%;
+    text-align: center;
+    margin-top: 5px;
+	font-family: 'Lobster';
+	font-size: 28px;
+	opacity: .75;
+}
+
 #guard {
 	height: 257.5px;
 	width: 90px;
@@ -20,21 +34,30 @@
   src: local('Lobster'), url(../fonts/Lobster.woff) format('woff');
 }
 
-#score {
-	margin-top: 5px;
-	font-family: 'Lobster';
-	font-size: 28px;
-}
+
 
 #board {
 	float: left;
 	height: 515px;
 	width: 770px;
-	background-color: #aca;
+	/*background-color: #aca;*/
+	/*opacity: 0.75;*/
+	background-color: rgba(0, 75, 0, .1);
 }
 
 .button-badge{
 	margin-top: 3px;
+}
+.game-container{
+	/*background-color:  	#FF0000;*/
+background-image:url('http://wakpaper.com/large/Waterfalls_wallpapers_24.jpg');
+background-repeat:no-repeat;
+background-size: 110%;
+        border-radius: 10px;
+        padding: 10px;
+        margin-left:  5px;
+        width: 65%;
+        height: 78%;
 }
 .panel-container{
 		float: left;
@@ -42,13 +65,16 @@
         border-radius: 10px;
         padding: 10px;
         padding-top: 303px;
-        margin-left: 5px;
+        margin-left: 10px;
         margin-top: -259px;
+      /* opacity: .8;*/
+      background: rgba(204, 204, 204, 0.8);
      
 }
 .control-panel{
 	float: left;
 	width: 100px;
+	
 	
 }
 .quit-panel{
@@ -60,13 +86,19 @@
 
 }
 
+
 .star:before {
 	content: url('../images/Star.png');
+	position: absolute;
+  	/*top: 0; bottom: 5px; left: 0; right:0;*/
+    margin-left: 15px;
+    margin-top: 15px;
 }
 
 .grid .row {
 	clear: left;
 	margin-left: 0;
+	background-color: rgba(255, 255, 255, .3);
 }
 
 .grid .row .pipe,
@@ -75,6 +107,7 @@
 .grid .row .end,
 .grid .row .empty {
 	float: left;
+
 }
 
 .pipe, .slot, .empty, .start, .end {
@@ -87,32 +120,45 @@
 
 .start {
 	background-image: url('../images/Start Flow Right.png');
+	
 }
 
 .end {
 	background-image: url('../images/End Flow Down.png');
+	
+	
 }
 
 .end.done {
-	background-image: url('../images/Start Flow Up.png');
+	background-image: url('../images/Start Flow Up.png')
+	
 }
 
 .slot.spill {
 	background-image: url('../images/waterbase.png');
+	
 }
 
 .pipe {
 	background-color: #aea;
+	z-index: 1;
+	
 }
 
 .slot {
-	background-color: #8c8;
+	background-color:  #228B22;
+	opacity: .75;
 }
 
 .slot.filled {
 	background-color: #ccc;
+	opacity: .75;
+	
 }
 
 .slot.over {
 	background-color: #fcc;
+	opacity: .75;
+	
+
 }
